<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".home.ActivityHomeMemberScrolling"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_collapseMode="pin" >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/bt_napvang"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:orientation="vertical"
                        android:layout_marginStart="10dp"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="40dp"
                            android:src="@drawable/napvang"
                            android:layout_height="40dp"
                            android:gravity="center" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10sp"
                            android:layout_gravity="center"
                            android:text="@string/home_napvang"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/gold"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_centerHorizontal="true"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="40dp"
                            android:src="@drawable/icon_sangold"
                            android:layout_height="40dp"
                            android:gravity="center" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:layout_gravity="center"
                            android:text="@string/home_100gold"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/bt_dangxuat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:src="@drawable/logout2"
                            android:text="@string/home_dangnhap" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_dangxuat"
                            android:layout_gravity="center"
                            android:textSize="10sp"
                            tools:ignore="SmallSp" />
                    </LinearLayout>
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/extendlayout"
        layout="@layout/content_scrolling_member" />

</LinearLayout>